--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -28,7 +28,11 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Run tests
-        run: npx cypress run --browser chrome --env login=${{ secrets.USERNAME }},password=${{ secrets.PASSWORD }}
+        run: |
+          npx cypress run \
+            --browser chrome \
+            --env login=${{ secrets.USERNAME }},\
+            password=${{ secrets.PASSWORD }}
       - name: Warunkowe udostępnienie screenshotów przy failu
         uses: actions/upload-artifact@v4
         if: failure()
