--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -31,8 +31,7 @@ jobs:
         run: |
           npx cypress run \
             --browser chrome \
-            --env login=${{ secrets.USERNAME }},\
-            password=${{ secrets.PASSWORD }}
+            --env "login=${{ secrets.USERNAME }}, password=${{ secrets.PASSWORD }}"
       - name: Warunkowe udostępnienie screenshotów przy failu
         uses: actions/upload-artifact@v4
         if: failure()
