added cypres cloud

--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -103,7 +103,10 @@ jobs:
         run: |
           npx cypress run \
             --browser edge \
-            --env "login=${{ secrets.USERNAME }},password=${{ secrets.PASSWORD }}"
+            --env "login=${{ secrets.USERNAME }},password=${{ secrets.PASSWORD }}" \
+            --record \
+            --key ${{ secrets.CYPRESS_RECORD_KEY }}
+
       - name: Save screenshots on failure
         uses: actions/upload-artifact@v4
         if: failure()
